logs/linecache2_build.log
Removing old build directory
Removing old work directory
BUILD START: linecache2-1.0.0-py27_0
Fetching package metadata: ......
Solving package specifications: .+ /home/ubuntu/miniconda/envs/_build/bin/python setup.py install
running install
running build
running build_py
creating build
creating build/lib
creating build/lib/linecache2
copying linecache2/__init__.py -> build/lib/linecache2
creating build/lib/linecache2/tests
copying linecache2/tests/inspect_fodder2.py -> build/lib/linecache2/tests
copying linecache2/tests/inspect_fodder.py -> build/lib/linecache2/tests
copying linecache2/tests/test_linecache.py -> build/lib/linecache2/tests
copying linecache2/tests/__init__.py -> build/lib/linecache2/tests
copying linecache2/tests/mapping_tests.py -> build/lib/linecache2/tests
running egg_info
writing linecache2.egg-info/PKG-INFO
writing top-level names to linecache2.egg-info/top_level.txt
writing dependency_links to linecache2.egg-info/dependency_links.txt
[pbr] Reusing existing SOURCES.txt
running install_lib
creating /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2
creating /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2/tests
copying build/lib/linecache2/tests/inspect_fodder2.py -> /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2/tests
copying build/lib/linecache2/tests/inspect_fodder.py -> /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2/tests
copying build/lib/linecache2/tests/test_linecache.py -> /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2/tests
copying build/lib/linecache2/tests/__init__.py -> /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2/tests
copying build/lib/linecache2/tests/mapping_tests.py -> /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2/tests
copying build/lib/linecache2/__init__.py -> /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2
byte-compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2/tests/inspect_fodder2.py to inspect_fodder2.pyc
  File "/home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2/tests/inspect_fodder2.py", line 102
    def keyworded(*arg1, arg2=1):
                            ^
SyntaxError: invalid syntax

byte-compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2/tests/inspect_fodder.py to inspect_fodder.pyc
byte-compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2/tests/test_linecache.py to test_linecache.pyc
byte-compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2/tests/__init__.py to __init__.pyc
byte-compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2/tests/mapping_tests.py to mapping_tests.pyc
byte-compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2/__init__.py to __init__.pyc
running install_egg_info
Copying linecache2.egg-info to /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2-1.0.0-py2.7.egg-info
running install_scripts
Compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2/tests/inspect_fodder2.py ...
  File "/home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/linecache2/tests/inspect_fodder2.py", line 102
    def keyworded(*arg1, arg2=1):
                            ^
SyntaxError: invalid syntax


The following NEW packages will be INSTALLED:

    openssl:    1.0.1k-1    
    pbr:        1.0.1-py27_0
    pip:        6.1.1-py27_0
    python:     2.7.9-3     
    readline:   6.2-2       
    setuptools: 16.0-py27_0 
    sqlite:     3.8.4.1-1   
    system:     5.8-2       
    tk:         8.5.18-0    
    zlib:       1.2.8-0     

Linking packages ...
[                    ]|                                                  |   0%[openssl             ]|                                                  |   0%[readline            ]|#####                                             |  10%[sqlite              ]|##########                                        |  20%[system              ]|###############                                   |  30%[tk                  ]|####################                              |  40%[zlib                ]|#########################                         |  50%[python              ]|##############################                    |  60%[setuptools          ]|###################################               |  70%[pbr                 ]|########################################          |  80%[pip                 ]|#############################################     |  90%[      COMPLETE      ]|##################################################| 100%
Removing old work directory
Source cache directory is: /home/ubuntu/miniconda/conda-bld/src_cache
Found source in cache: linecache2-1.0.0.tar.gz
Extracting download
Package: linecache2-1.0.0-py27_0
source tree in: /home/ubuntu/miniconda/conda-bld/work/linecache2-1.0.0
compiling .pyc files...
Command failed: /home/ubuntu/miniconda/envs/_build/bin/python -Wi /home/ubuntu/miniconda/envs/_build/lib/python2.7/compileall.py -q -x port_v3 /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages
